--- a/app/templates/dean/deanBase.html
+++ b/app/templates/dean/deanBase.html
@@ -28,6 +28,10 @@
                     <i class="fas fa-table"></i>
                     <span>Timetable</span>
                 </a>
+                <a href="{{ url_for('dean_mergeTimetable') }}" class="tab-link {% if active_tab == 'dean_mergeTimetabletab' %}active{% endif %}">
+                    <i class="fas fa-table"></i>
+                    <span>Merge Timetable</span>
+                </a>
                 <a href="{{ url_for('dean_invigilationReport') }}" class="tab-link {% if active_tab == 'dean_invigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
                     <span>Invigilation Report</span>
