--- a/app/templates/dean/deanHomepage.html
+++ b/app/templates/dean/deanHomepage.html
@@ -29,6 +29,18 @@
             </li>
         </div>
 
+        <!-- Row 3 First Fesatures to upload merge schedule files--> 
+        <div class="menu-section">
+            <!--   <h2>Upload File</h2><br>  -->
+            <a href="{{ url_for('dean_mergeTimetable')}}" style="text-decoration: none;"><h2>Timetable</h2></a>
+            <li class="submenu">
+                <strong>  Purpose:</strong>
+                <ul>    
+                    <li>Upload merged lecturer schedule files</li>
+                    <li>Access and review combined lecturer timetables</li>
+                </ul>
+            </li>
+        </div>
 {% endblock %}
 
 <!-- 
