--- a/app/templates/dean/deanBase.html
+++ b/app/templates/dean/deanBase.html
@@ -26,11 +26,11 @@
                 </a>
                 <a href="{{ url_for('dean_timetable') }}" class="tab-link {% if active_tab == 'dean_timetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
-                    <span>Timetable</span>
+                    <span>Own Timetable</span>
                 </a>
                 <a href="{{ url_for('dean_mergeTimetable') }}" class="tab-link {% if active_tab == 'dean_mergeTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
-                    <span>Merge Timetable</span>
+                    <span>Department Timetable</span>
                 </a>
                 <a href="{{ url_for('dean_invigilationReport') }}" class="tab-link {% if active_tab == 'dean_invigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
