--- a/app/templates/dean/deanMergeTimetable.html
+++ b/app/templates/dean/deanMergeTimetable.html
@@ -1,8 +1,8 @@
 {% extends "dean/deanBase.html" %}
-{% block title %}Dean Timetable{% endblock %}
+{% block title %}Dean DepartmentTimetable{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Timetables</h2>
+    <h2>Department Timetable</h2>
 
     {% set time_slots = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
     {% set week_days = ["MON", "TUE", "WED", "THU", "FRI"] %}
