--- a/app/templates/dean/deanMergeTimetable.html
+++ b/app/templates/dean/deanMergeTimetable.html
@@ -19,12 +19,14 @@
             </thead>
             <tbody>
                 {% for day in week_days %}
+                    {% if timetable_data %}
                     <tr>
                         <td><strong>{{ day }}</strong></td>
                         {% for time in time_slots %}
-                            <td>
-                                {% set ns = namespace(displayed=[]) %}
-                                {% for row in timetable_rows %}
+                        <td>
+                            {% set ns = namespace(displayed=[]) %}
+                            {% for row in timetable_data %}
+                                {% if not selected_lecturer or row.lecturerName == selected_lecturer %}
                                     {% set class_day = row.classDay %}
                                     {% set class_time = row.classTime %}
                                     {% set start_time = class_time.split('-')[0] %}
@@ -41,10 +43,12 @@
                                             </div>
                                         {% endif %}
                                     {% endif %}
-                                {% endfor %}
-                            </td>
+                                {% endif %}
+                            {% endfor %}
+                        </td>
                         {% endfor %}
                     </tr>
+                    {% endif %}
                 {% endfor %}
             </tbody>
         </table>
