--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -222,10 +222,12 @@
             </thead>
             <tbody>
                 {% for row in course_data %}
-                    <tr class="{% if course_data %}error-row-show{% endif %}">
+                    <tr class="{% if not row.courseDepartment and not row.practicalLecturer 
+                                and not row.tutorialLecturer and not row.courseExamId 
+                                and not row.courseStatus %}error-row-show{% endif %}">
                         <td>{{ loop.index }}</td>
                         <td>
-                            {% if row.courseStatus == 1 %}
+                            {% if row.courseStatus %}
                                 Activated
                             {% else %}
                                 <span style="color:red;">Inactivated</span>
