--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -222,7 +222,9 @@
             </thead>
             <tbody>
                 {% for row in course_data %}
-                    <tr class="{% if row.courseCodeSection in error_rows %}error-row-show{% elif row.courseStatus == 0 %}inactive-row-show{% endif %}">
+                    <tr class="{% if row.courseStatus == 0 %}inactive-row-show
+                        {% elif row.courseDepartment is none or row.practicalLecturer is none or row.tutorialLecturer is none %}error-row-show
+                        {% endif %}">
                         <td>{{ loop.index }}</td>
                         <td>
                             {% if row.courseStatus == 1 %}
