--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -295,23 +295,23 @@ html, body {
 
 
 .error-row-show {
-    background-color: #ffe6e6; /* light red for errors */
+    background-color: #fca7a7; /* light red for errors */
 }
 .inactive-row-show {
-    background-color: #f9f9f9; /* light gray for inactive */
+    background-color: lightgrey; /* light gray for inactive */
 }
 
 .frame-green {
     color: white; 
     background-color: #16bf42; 
-    padding: 2px 6px; 
+    padding: 0px 6px; 
     border-radius: 3px;
 }
 
 .frame-red {
     color: white; 
     background-color: #e93838; 
-    padding: 2px 6px; 
+    padding: 0px 6px; 
     border-radius: 3px;
 }
 
