--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -16,10 +16,6 @@
 
             <!-- Overview -->
             <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
-                <div class="dashboard-frame pie">
-                    <h3>Courses by Department</h3>
-                    <canvas id="courseDeptPieChart"></canvas>
-                </div>
                 <div class="dashboard-frame">
                     <h3>Total Courses</h3>
                     <p class="dashboard-text">{{ course_data|length }}</p>
@@ -27,6 +23,10 @@
                 <div class="dashboard-frame">
                     <h3>Courses With Missing Data/Erros</h3>
                     <p class="dashboard-text" style="color:red;">{{ error_rows }}</p>
+                </div>
+                <div class="dashboard-frame pie">
+                    <h3>Courses by Department</h3>
+                    <canvas id="courseDeptPieChart"></canvas>
                 </div>
             </div>
         </div>
@@ -225,7 +225,7 @@
                     <tr class="
                         {% if row.courseStatus == 0 %}
                             inactive-row-show
-                        {% elif row.courseDepartment is none or row.practicalLecturer is none or row.tutorialLecturer is none or row.courseExamId == 0 %}
+                        {% elif row.courseDepartment is none or row.practicalLecturer is none or row.tutorialLecturer is none or row.courseExamId is none %}
                             error-row-show
                         {% endif %}
                     ">
