--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -28,7 +28,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageCourse') }}" class="tab-link {% if active_tab == 'admin_manageCoursetab' %}active{% endif %}">
                     <i class="fas fa-book-open"></i>
-                    <span>Manage Course</span>
+                    <span>Manage Courses</span>
                 </a>
                 <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
                     <i class="fas fa-building-columns"></i>
