--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -4,8 +4,8 @@
 {% set show_dashboard = true %}
 {% set show_manual = true %}
 {% set show_edit = true %}
-{% block title %}Admin ManageCourse{% endblock %}
-{% block head_title %}<h2>Manage Course</h2>{% endblock %}  
+{% block title %}Admin ManageCourses{% endblock %}
+{% block head_title %}<h2>Manage Courses</h2>{% endblock %}  
 
 {% block dashboard_section %}
 <!-- Dashboard Form -->
@@ -21,7 +21,7 @@
                     <p class="dashboard-text">{{ course_data|length }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Courses With Missing Data/Erros</h3>
+                    <h3>Courses With Missing Data/Errors</h3>
                     <p class="dashboard-text" style="color:red;">{{ error_rows }}</p>
                 </div>
                 <div class="dashboard-frame pie">
@@ -127,7 +127,7 @@
 <!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageCourse') }}" method="POST">
     <div id="editSection" class="function-frame" style="width:100%">
-        <h4 style="text-align:center;">Edit Existing Course</h4><br>
+        <h4 style="text-align:center;">Edit Existing Courses</h4><br>
 
         <!-- Prefilled form (like manual section) -->
         <div class="profile-frame">
@@ -204,7 +204,7 @@
 
 {% block content %}
 <div class="menu-section">
-    <h2>List of Course</h2> 
+    <h2>List of Courses</h2> 
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
