--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -13,7 +13,7 @@
     <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
         <input type="hidden" name="form_type" value="dashboard">    
         <div class="form-left" style="width: 100%">
-            <div class="dashboard-row">
+            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr;">
                 <div class="dashboard-frame pie">
                     <h3>Total TimetableSets</h3>
                     <p class="dashboard-text" style="color:#1E90FF">{{ total_timetable }}</p>
@@ -23,7 +23,8 @@
                     <h3>Lecturers without Assigned Timetable</h3>
                     <p class="dashboard-text" style="color:#e63e3e">{{ unassigned_summary|length }}</p>
                 </div>
-
+            </div>
+            <div class="dashboard-row" style="grid-template-columns: repeat(5, 1fr);">
                 {% set days = [
                     {'name':'Monday','value':mon_timetable,'color':'#007bff'},
                     {'name':'Tuesday','value':tue_timetable,'color':'#28a745'},
