--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -248,7 +248,7 @@
                             {% if row.practicalLecturer %}
                                 Practical Lecturer: <strong>{{ row.practicalLecturer.userName }}</strong>
                             {% else %}
-                                <span class="frame-red">ERROR</span><br>
+                                <span class="frame-red" style="margin-bottom: 6px;">ERROR</span>
                             {% endif %}
                             <br>
                             {% if row.tutorialLecturer %}
