--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -248,13 +248,13 @@
                             {% if row.practicalLecturer %}
                                 Practical Lecturer: <strong>{{ row.practicalLecturer.userName }}</strong>
                             {% else %}
-                                <span class="frame-red">ERROR</span>
+                                <span class="frame-red">Practical Lecturer: ERROR</span>
                             {% endif %}
                             <br>
                             {% if row.tutorialLecturer %}
                                 Tutorial Lecturer: <strong>{{ row.tutorialLecturer.userName }}</strong>
                             {% else %}
-                                <span class="frame-red">ERROR</span>
+                                <span class="frame-red">Tutorial Lecturer: ERROR</span>
                             {% endif %}
                         </td>
                         <td>
