--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -4,8 +4,8 @@
 {% set show_dashboard = true %}
 {% set show_manual = true %}
 {% set show_edit = true %}
-{% block title %}Admin ManageDepartment{% endblock %}
-{% block head_title %}<h2>Manage Department</h2>{% endblock %}
+{% block title %}Admin ManageDepartments{% endblock %}
+{% block head_title %}<h2>Manage Departments</h2>{% endblock %}
 
 {% block dashboard_section %}
 <!-- Dashboard Form -->
@@ -22,11 +22,11 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total HOP</h3>
-                    <p class="dashboard-text" style="color:green;">{{ total_hop }}</p>
+                    <p class="dashboard-text" style="color:green;">{{ hops|length }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Dean/HOS</h3>
-                    <p class="dashboard-text" style="color:#cf8223;">{{ total_dean }}</p>
+                    <p class="dashboard-text" style="color:#cf8223;">{{ deans|length }}</p>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
 <!-- Edit Form -->
 <form id="editForm" action="{{ url_for('admin_manageDepartment') }}" method="POST" enctype="multipart/form-data">
     <div class="function-frame" style="width:100%">
-        <h4 style="text-align: center;">Edit Existing Department</h4>
+        <h4 style="text-align: center;">Edit Existing Departments</h4>
         <div class="profile-frame">
             <div class="form-left">
                 <label>Select Department</label>
@@ -129,7 +129,7 @@
 
 {% block content %}
 <div class="menu-section">
-    <h2>List of Department</h2>
+    <h2>List of Departments</h2>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
